// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="sc-AxiKw ikHNGi bg-theme-background"
      data-testid="Card"
    >
      <div
        class="flex flex-col p-4 space-y-8 bg-theme-background"
      >
        <div
          class="flex justify-between w-full"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-AxheI kNFwgA border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div>
              <h4
                class="text-lg font-semibold"
                data-testid="NewsCard__asset-undefined"
              />
              <div
                class="flex items-center space-x-4"
              >
                <p
                  class="text-sm font-semibold text-theme-neutral"
                  data-testid="NewsCard__author"
                >
                  Travis Walker, Co-Founder
                </p>
                <div
                  class="sc-AxhCb hvZPgQ border-theme-neutral-300 dark:border-theme-neutral-800"
                  type="vertical"
                />
                <p
                  class="text-sm font-semibold text-theme-neutral"
                  data-testid="NewsCard__date-created"
                >
                  <span
                    data-testid="timeago"
                  >
                    A few seconds ago
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col justify-end"
          >
            <div
              class="sc-AxhUy hthPiX"
              color="warning"
            >
              <span
                class="text-sm"
                data-testid="NewsCard__category"
              >
                #Technical
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-AxhCb bmdmIf border-theme-neutral-300 dark:border-theme-neutral-800"
          type="horizontal"
        />
        <p
          class="whitespace-pre-line text-theme-secondary-text"
          data-testid="NewsCard__content"
        >
          Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
          <a
            class="sc-AxgMl fZdMHS inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
          >
            https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
          </a>
        </p>
      </div>
      <div
        class="absolute -top-1 -right-1 flex items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewsCard should render with cover image 1`] = `
<DocumentFragment>
  <div
    data-testid="NewsCard"
  >
    <div
      class="sc-AxiKw ikHNGi bg-theme-background"
      data-testid="Card"
    >
      <div
        class="flex flex-col p-4 space-y-8 bg-theme-background"
      >
        <div
          class="flex justify-between w-full"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="sc-AxheI kNFwgA border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div>
              <h4
                class="text-lg font-semibold"
                data-testid="NewsCard__asset-undefined"
              />
              <div
                class="flex items-center space-x-4"
              >
                <p
                  class="text-sm font-semibold text-theme-neutral"
                  data-testid="NewsCard__author"
                >
                  Travis Walker, Co-Founder
                </p>
                <div
                  class="sc-AxhCb hvZPgQ border-theme-neutral-300 dark:border-theme-neutral-800"
                  type="vertical"
                />
                <p
                  class="text-sm font-semibold text-theme-neutral"
                  data-testid="NewsCard__date-created"
                >
                  <span
                    data-testid="timeago"
                  >
                    A few seconds ago
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col justify-end"
          >
            <div
              class="sc-AxhUy hthPiX"
              color="warning"
            >
              <span
                class="text-sm"
                data-testid="NewsCard__category"
              >
                #Marketing
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-AxhCb bmdmIf border-theme-neutral-300 dark:border-theme-neutral-800"
          type="horizontal"
        />
        <p
          class="whitespace-pre-line text-theme-secondary-text"
          data-testid="NewsCard__content"
        >
          June is over and it's time for the Monthly Update. This blog post will cover last month’s highlights, activities, development, partner activities, news and updates of our upcoming releases. 
          <a
            class="sc-AxgMl fZdMHS inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36"
          >
            https://blog.ark.io/ark-monthly-update-june-2020-edition-279a3dd47a36
          </a>
        </p>
        <div
          class="flex justify-center p-1 -mx-10 border-t-2 border-theme-primary-contrast"
        >
          <img
            alt="ARK Banner"
            src="https://via.placeholder.com/150"
          />
        </div>
      </div>
      <div
        class="absolute -top-1 -right-1 flex items-center m-4 space-x-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
